samples/_failures_safe/1761217911_7a24ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c1c95a91.c: In function ‘tokenize’:
./samples/SAFE/__tmp_c1c95a91.c:160:9: error: expected declaration or statement at end of input
  160 |         skip_whitespace(tokenizer);
      |         ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c1c95a91.c:160:9: error: expected declaration or statement at end of input
